<resources>
    <string name="app_name">Solve_Bridge</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="solve_bridge">Solve Bridge</string>
    <string name="Login">Login</string>
    <string name="forget_password">Forget password?</string>
    <string name="todo">TODO</string>
    <string name="enter_your_mail">Enter your mail</string>
    <string name="solvebridge">Solve Bridge</string>
    <string name="to_do">TODO</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="todo1">TODO</string>
    <string name="to2">TODO</string>
    <string name="mail">Enter your mail</string>
    <string name="todo2">TODO</string>
    <string name="registerpage">Register</string>
    <string name="developerbutton">Developer</string>
    <string name="problem_posterbutton">Problem Poster</string>
    <string name="researcherbutton">Researcher</string>
    <string name="select_role">Select Role</string>
    <string name="passwordreg">Password</string>
    <string name="emailreg">Email</string>
    <string name="name">Name</string>
    <string name="profile">TODO</string>
    <string name="register1">Register</string>
    <string name="category_ai_machine_learning">Category AI / Machine Learning</string>
    <string name="posted_by_karan_j">Posted by Karan J</string>
    <string name="ai_based_disease_detection">AI-Based Disease Detection</string>
    <string name="category_ai_machine_learning1">Category AI / Machine Learning</string>
    <string name="posted_by_john_d">Posted by John D.</string>
    <string name="smart_home_automation">Smart Home Automation</string>
    <string name="search">Search</string>
    <string name="solve_bridgehome">Solve Bridge</string>
    <string name="menu_icon_description">Menu Icon</string>
    <string name="profile_pic">Profile_pic</string>
    <string name="v_mona_chrishline">V.Mona Chrishline</string>
    <string name="role_developer">Role: Developer</string>
    <string name="my_problems">My problems</string>
    <string name="iot_security_system">IoT security system</string>
    <string name="my_solutions">My solutions</string>
    <string name="ai_based_disease">AI Based Disease Detection</string>
    <string name="renewable_energy_tracker">Renewable Energy Tracker</string>
</resources>